# hwp_carbon

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple_example.ipynb
hwp_carbon/: data_classes.py  decay.py  exceptions.py  network.py  network_plotting.py  simulator.py  utils.py
tests/: test.py  test_data.xlsx
